argo/satisfactory/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: satisfactory
spec:
  selector:
    matchLabels:
      app: satisfactory
  serviceName: "satisfactory"
  replicas: 1
  template:
    metadata:
      labels:
        app: satisfactory
    spec:
      containers:
        - name: satisfactory
          image: wolveix/satisfactory-server:latest
          ports:
            - name: "api"
              containerPort: 7777
              protocol: TCP
            - name: "game"
              containerPort: 7777
              protocol: UDP
          volumeMounts:
            - name: satisfactory-config
              mountPath: /config
            - name: satisfactory-data
              mountPath: /config/gamefiles
  volumeClaimTemplates:
    - metadata:
        name: satisfactory-config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: satisfactory-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 20Gi
