argo/satisfactory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: satisfactory
  labels:
    app: satisfactory
spec:
  type: NodePort
  ports:
    - name: "game"
      port: 7777
      protocol: UDP
      targetPort: 7777
    - name: "api"
      port: 7777
      protocol: TCP
      targetPort: 7777
  selector:
    app: satisfactory
