argo/satisfactory/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: satisfactory-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: satisfactory.deathofdirt.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: satisfactory
                port:
                  number: 7777  # Dies ist der TCP-Port für die API
